--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-tsparticles": "^2.1.3",
+    "sweetalert2": "^11.16.0",
     "tsparticles": "^2.1.3"
   },
   "devDependencies": {
